# PDF-QA-Bot-With-Article-Summarization

./: .gitignore  README.md  main.py  pdf_qa.py  pyproject.toml  render.yaml  requirements.txt  summarizer.py  upload_history.json
static/css/: style.css
static/js/: script.js
templates/: index.html
